# sanity.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: helpers.rs  lib.rs
