[package]
name = "sanity"
version = "0.1.1"
authors = ["Douglass Hooker <DouglassHooker@gmail.com>"]
edition = "2018"
description = "The open source client for consuming https://sanity.io with Rust, based on reqwest."
license = "MIT"
repository = "https://github.com/DukeFerdinand/sanity.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
serde = "1.0.102"
serde_json = "1.0.41"
